nullaway_error_B111CC25-A026-49EF-9E7A-4865F81ACC6B.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-context/src/main/java/org/springframework/context/annotation/ConfigurationClassParser.java:635: error: [NullAway] dereferenced expression configurationClass is @Nullable
		AnnotationMetadata metadata = configurationClass.getMetadata();
		                                                ^
    (see http://t.uber.com/nullaway )
